# madara-cli

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md
.github/actions/setup-linux/: action.yml
.github/actions/setup-mac/: action.yml
.github/workflows/: appchain-linux.yml  appchain-mac.yml  build-docker.yml  command_tests.yml  commands.yml  devnet-linux.yml  devnet-mac.yml  devnet-test.yml  docker_images.yml  pull-request.yml  rust-check.yml  rust-test.yml  sequencer-linux.yml  sequencer-mac.yml  simple.yml  task-docker-build-and-publish.yml
crates/common/: Cargo.toml
crates/common/src/: config.rs  docker.rs  lib.rs
crates/common/src/prompt/: input.rs  mod.rs  validation.rs
crates/common/src/term/: logger.rs
crates/config/: Cargo.toml
crates/config/src/: bootstrapper.rs  compose.rs  constants.rs  lib.rs  madara.rs  pathfinder.rs  prover.rs
crates/madara/: Cargo.toml
crates/madara/config/: global_config.toml
crates/madara/src/: constants.rs  main.rs
crates/madara/src/commands/: anvil.rs  bootstrapper.rs  madara.rs  mod.rs  orchestrator.rs  os.rs  pathfinder.rs
crates/madara/src/commands/args/: madara.rs
crates/madara/src/config/: bootstrapper.rs  constants.rs  eth_wallet.rs  global_config.rs  global_config.toml  l1_config.rs  local.toml  madara.rs  mod.rs  orchestrator.rs
crates/types/: Cargo.toml
crates/types/src/: madara.rs
