[workspace]
members = [
    "crates/common",
    "crates/config",
    "crates/types",
    "crates/madara",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
homepage = "https://www.madara.build/"
license = "MIT OR Apache-2.0"
authors = ["Madara-alliance <hello@madara-alliance.com>"]
exclude = ["./github"]
repository = "https://github.com/madara-alliance/madara-cli/tree/main/"
description = "Madara CLI is a set of tools to streamline the node setup process to quickly and efficiently deploy your own network."
keywords = ["cryptography", "blockchain"]

[workspace.dependencies]
# Local dependencies
madara_cli_common = { path = "crates/common" }
madara_cli_config = { path = "crates/config" }
madara_cli_types = { path = "crates/types" }

# External dependencies
anyhow = "1.0.82"
clap = { version = "4.4", features = ["derive", "wrap_help", "string"] }
clap_complete = "4.5.33"
clap-markdown = "0.1.4"
cliclack = "0.2.5"
console = "0.15.8"
dotenvy = "0.15.7"
figment = "0.10.19"
hex = "0.4"
human-panic = "2.0"
lazy_static = "1.4.0"
minijinja = "2.7.0"
once_cell = "1.19.0"
secp256k1 = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha3 = "0.10"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0.57"
toml = "0.8.20"
url = { version = "2.5.0", features = ["serde"] }
xshell = "0.2.6"
