[package]
name = "madara_config_common"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
authors.workspace = true
exclude.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
cliclack.workspace = true
xshell.workspace = true
thiserror.workspace = true
strum.workspace = true
