[package]
name = "madara_cli_config"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
authors.workspace = true
exclude.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
cliclack.workspace = true
madara_cli_common.workspace = true
madara_cli_types.workspace = true
xshell.workspace = true
thiserror.workspace = true
strum.workspace = true
serde.workspace = true
