[package]
name = "madara"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap-markdown.workspace = true
cliclack.workspace = true
dotenvy.workspace = true
figment = { workspace = true, features = ["toml", "json", "yaml"] }
madara_cli_common.workspace = true
madara_cli_config.workspace = true
madara_cli_types.workspace = true
minijinja.workspace = true
human-panic.workspace = true
lazy_static.workspace = true
thiserror.workspace = true
xshell.workspace = true
hex.workspace = true
sha3.workspace = true
secp256k1.workspace = true
strum.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde.workspace = true
toml.workspace = true
